name:                code
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/dfordivam/code#readme
license:             BSD3
license-file:        LICENSE
author:              Divam
maintainer:          dfordivam@gmail.com
copyright:           All rights reserved.
category:            tutorial
build-type:          Simple
cabal-version:       >=1.10

executable code
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , transformers
                       , persistent
                       , persistent-sqlite
                       , persistent-template
